# infocenter

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2414ed6bfee4_add_diagrams_table.py
app/: README.md  main.py
app/api/: auth.py  deps.py  users.py
app/api/routes/: FILES_README.md  auth.py  charts.py  datasets.py  diagrams.py  files.py  notifications.py  permissions.py  units.py  (+1 more)
app/core/: config.py  enums.py  exceptions.py  security.py
app/db/: session.py
app/models/: __init__.py  chart_config_model.py  diagram_audit_model.py  diagram_model.py  file_model.py  notification_model.py  permission_model.py  unit_model.py  user_model.py
app/repositories/: chart_repository.py  diagram_repository.py  file_repository.py  notification_repository.py  permission_repository.py  unit_repository.py  user_repositoriy.py
app/schemas/: auth_schema.py  chart_schema.py  diagram_schema.py  file_schema.py  notification_schema.py  permission_schema.py  user_schema.py
app/services/: NOTIFICATIONS_README.md  auth_service.py  chart_service.py  diagram_service.py  file_service.py  minio_service.py  notification_service.py  permission_service.py  user_service.py
docker_local/: docker-compose-loc.yml
nginx/: nginx.conf
nginx/ssl/: fullchain.pem  privkey.pem
tests/: README.md  conftest.py  fixtures.py  test_api.py  test_deps.py  test_email_and_passwords.py  test_models.py  test_notifications.py  test_repositories.py  test_services.py  test_user_service.py
(+2 files in other folders)
